<resources>
    <string name="app_name">Tugas_UTS_AKB_IF10_StenlyGustafDamping</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="addfriend">Add Friend</string>
    <string name="date">Tanggal</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="annyeong_welcome_to_love_yourself">Welcome, Have Fun!!!</string>
    <string name="group">Group</string>
    <string name="featured_location">All Featured Locations</string>
    <string name="featured_location_description">All the locations that are featured and have the top demand in town!</string>
    <string name="catatan">Catatan</string>
    <string name="listcatatan">List Catatan</string>
    <string name="schedule">Jadwal</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="listteman">Add Teman</string>
    <string name="music">Music</string>
    <string name="addphoto">Add Foto</string>
    <string name="share">Share</string>
    <string name="star">Rate Us</string>
    <string name="slogan">www.yourapps.com</string>
    <string name="logo">Your Apps</string>
    <string name="search">Search</string>
    <string name="most_view_locations">Most Viewed</string>
    <string name="view_all">View All</string>
    <string name="jeniskoi">Jenis Koi</string>


    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Add Missing Place</string>
    <string name="third_slide_title">Sit Back And Enjoy</string>


    <string name="first_slide_desc">Kamu Bisa Mencari Tempat untuk membeli Ikan hias(Koi).wklskdjdfl.dfhgofjmdbjdfbasgdgehhfdn lvdkcahdid</string>
    <string name="second_slide_desc">flkglkfkfnkc</string>
    <string name="third_slide_desc">We WILL HANDLE EVERYTHING FORYOU.</string>


    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Gets Started</string>

</resources>