<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navHome"
            android:title="@string/home"
            android:icon="@drawable/icons8_home"/>

        <item
            android:id="@+id/navCatatan"
            android:title="@string/listcatatan"
            android:icon="@drawable/ic_baseline_menu_book_24"/>

        <item
            android:id="@+id/navAddFriend"
            android:title="@string/addfriend"
            android:icon="@drawable/icons8_addfriend"/>
        <item
            android:id="@+id/navDate"
            android:title="@string/date"
            android:icon="@drawable/icons8_date"/>


    </group>




    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navLogin"
                    android:title="@string/login"
                    android:icon="@drawable/icons8_login"/>
                <item
                    android:id="@+id/navProfile"
                    android:title="@string/profile"
                    android:icon="@drawable/icons8_profile"/>
                <item
                    android:id="@+id/navLogout"
                    android:title="@string/logout"
                    android:icon="@drawable/icons8_logout"/>
            </group>
        </menu>
    </item>




    <item android:title="Share">
        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/navShare"
                    android:title="@string/share"
                    android:icon="@drawable/icons8_share"/>
                <item
                    android:id="@+id/navRate"
                    android:title="@string/star"
                    android:icon="@drawable/icons8_ratestar"/>

            </group>

        </menu>
    </item>
</menu>