<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:id="@+id/drawer_layout"
    android:orientation="vertical"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:theme="@style/navigationTheme"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/home_background">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icons8_menu"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/add2"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:background="@color/PutihTulang"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/jacques_francois"
                        android:text="@string/logo"
                        android:textColor="@color/bluesky1"
                        android:textSize="24sp" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@id/textAppName"
                        android:background="@color/white"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:elevation="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"/>

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/search"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp"/>

                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card1"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/addphoto"
                                android:layout_centerInParent="true"/>

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fredericka_the_great"
                            android:textColor="@color/bluesky1"
                            android:gravity="center_horizontal"
                            android:text="@string/addphoto"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card2"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/addfriend"
                                android:layout_centerInParent="true"/>

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fredericka_the_great"
                            android:textColor="@color/bluesky1"
                            android:gravity="center_horizontal"
                            android:text="@string/listteman"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card3"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/schedule"
                                android:layout_centerInParent="true"/>

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fredericka_the_great"
                            android:textColor="@color/bluesky1"
                            android:gravity="center_horizontal"
                            android:text="@string/schedule"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card4"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/book"
                                android:layout_centerInParent="true"/>

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fredericka_the_great"
                            android:textColor="@color/bluesky1"
                            android:gravity="center_horizontal"
                            android:text="@string/catatan"
                            android:textAlignment="center" />

                    </LinearLayout>


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:id="@+id/featured_background"
                        android:layout_width="170dp"
                        android:layout_height="280dp"
                        android:background="@color/PutihTulang"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/featured_location"
                            android:textSize="25dp"
                            android:layout_margin="10dp"
                            android:textColor="@color/pinkrose1"
                            android:layout_marginTop="50dp"
                            android:textAllCaps="true"
                            android:layout_marginLeft="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/featured_location_description"/>


                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_toRightOf="@+id/featured_background"
                        android:background="@color/home_background_light" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/most_viewed_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/chewy"
                            android:text="@string/most_view_locations"
                            android:textAllCaps="true"
                            android:textColor="@color/birulaut1"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/cormorant_light"
                            android:text="@string/view_all"
                            android:textColor="@color/black" />


                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/most_viewed_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        tools:ignore="DuplicateIds" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/chewy"
                            android:text="@string/jeniskoi"
                            android:textAllCaps="true"
                            android:textColor="@color/birulaut1"
                            android:textSize="20sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/cormorant_light"
                            android:text="@string/view_all"
                            android:textColor="@color/black" />


                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categories_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"/>


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>